# langton

./: README.md  pyproject.toml
langton/: __init__.py
langton/cli/: cli.py
langton/lib/: ant.py  color.py  cv.py  graphics.py  grid.py  policy.py  rule.py  simulation.py  turn.py  update.py  video.py
